; ModuleID = '/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/usart/src/extr_drv_usart_static.c_DRV_USART0_Deinitialize.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/usart/src/extr_drv_usart_static.c_DRV_USART0_Deinitialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT_SOURCE_USART_2_TRANSMIT = common dso_local global i32 0, align 4
@INT_SOURCE_USART_2_RECEIVE = common dso_local global i32 0, align 4
@INT_SOURCE_USART_2_ERROR = common dso_local global i32 0, align 4
@USART_ID_2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DRV_USART0_Deinitialize() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @INT_SOURCE_USART_2_TRANSMIT, align 4
  %3 = call i32 @SYS_INT_SourceDisable(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @INT_SOURCE_USART_2_RECEIVE, align 4
  %5 = call i32 @SYS_INT_SourceDisable(i32 %4)
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* @INT_SOURCE_USART_2_ERROR, align 4
  %7 = call i32 @SYS_INT_SourceDisable(i32 %6)
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* @USART_ID_2, align 4
  %10 = call i32 @PLIB_USART_Disable(i32 %9)
  ret void
}

declare dso_local i32 @SYS_INT_SourceDisable(i32) #1

declare dso_local i32 @PLIB_USART_Disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
